# mfn

./: .dockerignore  .env.example  .gitignore  ACTUAL_CURRENT_STATUS.md  ACTUAL_STATUS.md  ADAPTIVE_ROUTING_ALGORITHM.md  API_REFERENCE.md  ARCHITECTURE_GAP_ANALYSIS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  COMPLETION_ROADMAP.md  CRITICAL_DOCUMENTATION_FIXES_NEEDED.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_READY.md  DOCUMENTATION_INVENTORY_REPORT.md  Dockerfile  EMBEDDING_SERVICE_ARCHITECTURE.md  FINAL_STATUS_SPRINT3.md  FUTURE_ENHANCEMENTS.md  HIGH_PERFORMANCE_IMPLEMENTATION_PLAN.md  HONEST_COMPLETION_ASSESSMENT.md  IMPLEMENTATION_INVENTORY.json  IMPLEMENTATION_TASK_BREAKDOWN.md  INTEGRATION_STATUS_SUMMARY.md  INTEGRATION_VERIFICATION_SUMMARY.md  KNOWN_LIMITATIONS.md  LAYER2_SOCKET_FIX_REPORT.md  LAYER5_IMPLEMENTATION_NOTES.md  LICENSE  MFN_100_PERCENT_COMPLETE.md  MFN_ACTUAL_STATUS_REPORT.md  MFN_COMPREHENSIVE_QUALITY_REVIEW.md  MFN_DOCUMENTATION_CODE_ALIGNMENT_REPORT.md  MFN_IMPLEMENTATION_ROADMAP.md  MFN_IMPLEMENTATION_VERIFICATION_REPORT.md  MFN_INTEGRATION_ACTION_PLAN.md  MFN_INTEGRATION_COMPLETE.md  (+77 more)
${base_dir}/layer2_dsr/pool_discord_unified.snapshot/: data.mdb  lock.mdb
${base_dir}/layer5_psr/: pool_discord_unified.aof
${base_dir}/layer5_psr/pool_discord_unified.snapshot/: data.mdb  lock.mdb
.github/workflows/: comprehensive_testing.yml
.shamash/: custom-rules.json
benches/: 2025-11-05-0621-baseline-bench.md  2025-11-05-0645-optimized-bench.md  2025-11-05-1600-monolithic-bench.md  socket_benchmark.rs
dashboard/: README.md  dashboard.js  go.mod  index.html  metrics_collector.py  metrics_server.go  start_dashboard.sh
data/: mcp_omni.db-shm  mcp_omni.db-wal
docker/config/: mfn_config.json  supervisord.conf  version.txt
docker/monitoring/: prometheus.yml
docker/scripts/: api_gateway.py  dashboard_server.py  health_check.sh  health_monitor.sh  persistence_daemon.py  start_orchestrator.sh  test_deployment.py
docs/: LAYER5_PSR_SPEC.md  SECRETS.md
docs/architecture/: README.md  socket-architecture.md  system-design.md
docs/guides/: getting-started.md  implementation-guide.md
docs/research/: implementation-roadmap.md
docs/research/horizontal_scaling/: load_balancer.py  (+3 more)
horizontal_scaling/: requirements.txt
layer1-zig-ifr/: build.zig  socket_main  test_arraylist.zig
layer1-zig-ifr/include/: mfn_layer1_ifr.h
layer1-zig-ifr/src/: ifr.zig  memory_stress_test.zig  socket_client_test.zig  socket_main.zig  socket_server.zig
layer2-rust-dsr/: Cargo.toml
layer2-rust-dsr/benches/: similarity_benchmark.rs
layer2-rust-dsr/examples/: performance_comparison.rs  socket_demo.rs
layer2-rust-dsr/src/: binary_protocol.rs  dynamics.rs  encoding.rs  lib.rs  pool_manager.rs  reservoir.rs  similarity.rs  socket_server.rs
layer2-rust-dsr/src/persistence/: mod.rs  recovery.rs  snapshot.rs
layer2-rust-dsr/tests/: memory_management_test.rs
layer3-go-alm/: benchmark_optimizations.py  go.mod  go.sum  main.go  stress_test.go
layer4-context-engine/: Cargo.toml
layer4-context-engine/src/: lib.rs  main.rs  socket_server.rs
layer4-rust-cpe/: Cargo.toml
layer4-rust-cpe-simple/: Cargo.toml
layer4-rust-cpe-simple/src/: lib.rs
layer4-rust-cpe/benches/: prediction_benchmark.rs
layer4-rust-cpe/src/: error.rs  ffi.rs  lib.rs  pool_manager.rs  prediction.rs  temporal.rs
layer4-rust-cpe/src/persistence/: aof.rs  mod.rs  recovery.rs  snapshot.rs
layer4-rust-cpe/tests/: memory_limit_test.rs  temporal_prediction_test.rs
layer4-standalone/: Cargo.toml
layer4-standalone/src/: main.rs
layer5-rust-psr/: Cargo.toml
layer5-rust-psr/src/: lib.rs  pattern.rs  search.rs  storage.rs
layer5-rust-psr/src/persistence/: aof.rs  mod.rs  recovery.rs  snapshot.rs
legacy/: mfn_client.py  optimized_mfn_client.py
lmdb-benchmark/: Cargo.toml
lmdb-benchmark/src/: main.rs
mfn-binary-protocol/: Cargo.toml  README.md  protocol_spec.md
mfn-binary-protocol/include/: mfn_protocol.h
mfn-binary-protocol/src/: compatibility.rs  lib.rs
mfn-core/: Cargo.toml  README.md
mfn-core/src/: layer_interface.rs  memory_types.rs  orchestrator.rs  parallel_orchestrator.rs
mfn-core/tests/: orchestrator_routing_test.rs
mfn-integration/: Cargo.toml  README.md
mfn-integration/src/: health.rs  lib.rs  socket_clients.rs  socket_integration.rs
mfn-integration/src/embeddings/: config.rs  mod.rs  models.rs  service.rs  tests.rs
mfn-integration/tests/: live_integration_test.rs  parallel_routing_tests.rs
mfn-monolith/: Cargo.toml
mfn-monolith/benches/: layer3_benchmark.rs  monolith_benchmark.rs
mfn-monolith/examples/: basic_usage.rs
mfn-monolith/src/: layer1.rs  layer2.rs  layer3.rs  layer4.rs  lib.rs  orchestrator.rs  types.rs
mfn-monolith/tests/: stress_test.rs
mfn-optimized/: Cargo.toml
mfn-optimized/examples/: benchmark.rs
mfn-optimized/src/: compression.rs  lense.rs  lib.rs  network_topology.rs  shared_memory.rs  simd_ops.rs
mfn-orchestrator/: http_server.py  orchestrator.py  orchestrator.py.backup  test_layer2_fix.py
mfn-unified-socket/: Cargo.toml
mfn-unified-socket/src/: config.rs  lib.rs  protocol.rs  router.rs
scripts/: compare_benchmarks.py  run_integration_tests.sh  start_all_layers.sh  stop_all_layers.sh  update_documentation.py
scripts/deploy/: start-layers.sh  start-system.sh  validate-deployment.sh
scripts/dev/: benchmarks.sh  run-tests.sh  validation.sh
src/: lib.rs
src/api_gateway/: layer_client.rs  mod.rs  routes.rs  swagger.html
src/socket/: client.rs  mod.rs  monitor.rs  pool.rs  protocol.rs  router.rs  server.rs
tests/: integration_test.rs  orchestrator_validation_test.py  persistence_integration_test.rs  real_performance_test.py  test_layer3_multipool.py  validation_test.rs
tests/integration/: INTEGRATION_TEST_COMPLETE.md  README.md  full_system_test.rs  health_check_test.rs  test_harness.rs
tests/stress/: mfn_load_test.rs
tests/validation/: comprehensive_validation_framework.py  container_deployment_test.py  test_framework_demo.py
tools/: shared_memory_bridge.py
(+52 files in other folders)
