[package]
name = "mfn-telepathy"
version = "1.0.0"
edition = "2021"
authors = ["MFN Development Team"]
description = "Memory Flow Network - Unified Socket Communication System"
license = "MIT"

[workspace]
members = [
    "layer2-rust-dsr",
    "layer4-rust-cpe",
    "layer5-rust-psr",
    "mfn-core",
    "mfn-integration",
    "mfn-binary-protocol",
]
exclude = ["lmdb-benchmark"]

[dependencies]
# MFN Core
mfn-core = { path = "mfn-core" }
mfn-integration = { path = "mfn-integration" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework for API Gateway
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-br", "trace", "timeout"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

# Binary protocol and compression
lz4_flex = "0.11"
bincode = "1.3"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"

# Time and duration
chrono = "0.4"

# Socket monitoring
prometheus = { version = "0.13", optional = true }

# Testing
mockall = { version = "0.12", optional = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = "0.5"
futures = "0.3"

[features]
default = ["monitoring"]
monitoring = ["prometheus"]
testing = ["mockall"]
full = ["monitoring", "testing"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[[bin]]
name = "mfn-gateway"
path = "src/bin/gateway.rs"

[[bin]]
name = "mfn-monitor"
path = "src/bin/monitor.rs"

[[bench]]
name = "socket_benchmark"
harness = false

[[test]]
name = "mfn_load_test"
path = "tests/stress/mfn_load_test.rs"

[[test]]
name = "full_system_test"
path = "tests/integration/full_system_test.rs"

[[test]]
name = "health_check_test"
path = "tests/integration/health_check_test.rs"
