[package]
name = "layer4-rust-cpe"
version = "0.1.0"
edition = "2021"
authors = ["MetaFore"]
license = "BUSL-1.1"
description = "Layer 4: Context Prediction Engine - Temporal pattern analysis and memory access prediction"
homepage = "https://github.com/TheAgencyInstitute/mfn-system"
repository = "https://github.com/TheAgencyInstitute/mfn-system"
keywords = ["memory", "prediction", "temporal", "ai", "context"]
categories = ["algorithms", "science"]
readme = "README.md"

[dependencies]
# MFN Core interfaces
mfn-core = { path = "../mfn-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.77"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Math and algorithms
ndarray = "0.15"
smartcore = { version = "0.3", features = ["serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
indexmap = "2.0"

# Thread-safe primitives
parking_lot = "0.12"

# Random number generation
rand = "0.8"

# Statistics
statistical = "1.0"

# Linear algebra for sequence analysis
nalgebra = "0.32"

# FFI support
libc = "0.2"

# Persistence
lmdb = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[features]
default = ["temporal-analysis", "ffi"]

# Enable advanced temporal pattern analysis
temporal-analysis = []

# Enable FFI interface
ffi = []

# Enable detailed performance metrics
metrics = []

[[bin]]
name = "layer4_socket_server"
path = "src/bin/layer4_socket_server.rs"

[[bin]]
name = "simple_context_server"
path = "src/bin/simple_context_server.rs"

[[bench]]
name = "prediction_benchmark"
harness = false

[lib]
name = "layer4_cpe"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]