[package]
name = "layer5-rust-psr"
version = "0.1.0"
edition = "2021"
authors = ["MetaFore"]
license = "BUSL-1.1"
description = "Layer 5: Pattern Structure Registry - Pattern storage and similarity search for APEX"

[dependencies]
# MFN Core
mfn-core = { path = "../mfn-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Collections
parking_lot = "0.12"

# Persistence (from Sprint 4)
lmdb = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "layer5_socket_server"
path = "src/bin/layer5_socket_server.rs"

[lib]
name = "layer5_psr"
path = "src/lib.rs"
