[package]
name = "mfn-binary-protocol"
version = "0.1.0"
edition = "2021"
authors = ["MFN Development Team"]
description = "High-performance binary protocol for Memory Flow Network Phase 2"
license = "BUSL-1.1"
repository = "https://github.com/mfn/telepathy"
keywords = ["binary", "protocol", "serialization", "memory", "performance"]
categories = ["encoding", "network-programming", "data-structures"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance and compression
lz4_flex = { version = "0.11", optional = true }

# FFI support
libc = "0.2"

# Async support
tokio = { version = "1.0", features = ["full"], optional = true }

# Development and testing
criterion = { version = "0.5", optional = true }
proptest = { version = "1.0", optional = true }

# MFN core types
mfn-core = { path = "../mfn-core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio-test = "0.4"

[features]
default = ["compression", "async"]
compression = ["lz4_flex"]
async = ["tokio"]
benchmarks = ["criterion"]
property_testing = ["proptest"]
ffi = []

[lib]
name = "mfn_binary_protocol"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]