[package]
name = "mfn-integration"
version = "0.1.0"
edition = "2021"
authors = ["The Agency Institute"]
license = "MIT"
description = "Memory Flow Network Integration Examples and Testing"
homepage = "https://github.com/TheAgencyInstitute/mfn-system"
repository = "https://github.com/TheAgencyInstitute/mfn-system"
keywords = ["memory", "neural", "prediction", "integration", "mfn"]
categories = ["algorithms", "science", "web-programming"]

[dependencies]
# MFN Core and Layers
mfn-core = { path = "../mfn-core" }
layer4-rust-cpe = { path = "../layer4-rust-cpe" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.77"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Layer 3 Go ALM communication  
reqwest = { version = "0.11", features = ["json"] }

# FFI and process communication
libc = "0.2"

# For socket clients
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"

# Time and measurements
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"], optional = true }

# Statistics for benchmarks
statrs = "0.16"

# For embedding generation (simpler implementation)
nalgebra = "0.32"  # For vector operations

# For TF-IDF and hash-based embeddings
ahash = "0.8"

# For cache directory
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["layer1", "layer2", "layer3", "layer4"]

# Enable individual layers
layer1 = []  # Zig IFR via FFI
layer2 = []  # Rust DSR direct
layer3 = []  # Go ALM via HTTP
layer4 = []  # Rust CPE direct

# Performance features
benchmarks = ["criterion"]
profiling = []