[package]
name = "mfn-monolith"
version = "0.1.0"
edition = "2021"
authors = ["MFN Development Team"]
description = "Monolithic MFN - Single-process high-performance memory network"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing (Layer 1)
ahash = "0.8"
rustc-hash = "1.1"

# Graph (Layer 3)
petgraph = "0.6"

# Embeddings
ndarray = "0.15"
nalgebra = "0.32"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "monolith_benchmark"
harness = false
