[package]
name = "mfn-optimized"
version = "0.1.0"
edition = "2021"
authors = ["The Agency Institute"]
license = "MIT"
description = "MFN High-Performance Optimizations - Bit-level compression, shared memory, lense system"

[dependencies]
# Core MFN
mfn-core = { path = "../mfn-core" }

# High-performance computing
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Bit manipulation and compression
bit-vec = "0.6"
bitvec = "1.0"
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }

# Memory mapping and shared memory
memmap2 = { version = "0.9", optional = true }
shared_memory = { version = "0.12", optional = true }
page_size = "0.6"

# SIMD and vectorization
wide = "0.7"

# Hashing
seahash = "4.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
highway = "1.1"

# Atomic operations
atomic = "0.6"
crossbeam-utils = "0.8"

# Serialization (fast)
rmp-serde = "1.1"
bincode = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = ["simd", "compression", "shared-memory"]
simd = []
compression = ["lz4_flex", "zstd"]
shared-memory = ["memmap2", "shared_memory"]
unsafe-optimizations = []