[package]
name = "mfn-unified-socket"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }

# Layer integrations
mfn_layer2_dsr = { path = "../layer2-rust-dsr" }
layer5_psr = { package = "layer5-rust-psr", path = "../layer5-rust-psr" }
ndarray = "0.15"

[lib]
name = "mfn_unified_socket"
path = "src/lib.rs"

[[bin]]
name = "mfn-unified-server"
path = "src/bin/unified_server.rs"
